tests/snapshots/snapshot_tests__array_hybr_sum.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_hybr_sum.vmt",
    status: Panic,
    used_instantiations: [],
}
