tests/snapshots/snapshot_tests__array_index_compl.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_index_compl.vmt",
    status: Panic,
    used_instantiations: [],
}
